--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # # Release builds
-          # - os: macos-15
-          #   config: "release"
-          # We want to test C++ and Swift only (in each direction)
-          # cross_test_flags: "--all-cross --filter cpp --filter swift"
+          # Release builds
+          - os: macos-15
+            config: "release"
+            # We want to test C++ and Swift only (in each direction)
+            cross_test_flags: "--all-cross --filter cpp --filter swift"
           - os: ubuntu-24.04
             config: "release"
             cross_test_flags: "--all-cross"
@@ -32,41 +32,41 @@ jobs:
             config: "release"
             build_flags: "SKIP=csharp" # Skip C# on ARM as .NET compiler keeps crashing
             test_flags: "--rfilter=java/Ice/udp --rfilter=csharp" # Remove rfilter once https://github.com/zeroc-ice/ice/issues/3389 is fixed
-          # - os: windows-2022
-          #   config: "release"
-          #   build_flags: "/p:Platform=x64"
-          #   test_flags: "--platform=x64"
-          # - os: windows-2022
-          #   config: "cpp-win32-release"
-          #   working_directory: "cpp"
-          #   build_flags: "/p:Platform=Win32"
-          #   msbuild_project: "msbuild/ice.proj"
-          #   test_flags: "--platform=Win32"
+          - os: windows-2022
+            config: "release"
+            build_flags: "/p:Platform=x64"
+            test_flags: "--platform=x64"
+          - os: windows-2022
+            config: "cpp-win32-release"
+            working_directory: "cpp"
+            build_flags: "/p:Platform=Win32"
+            msbuild_project: "msbuild/ice.proj"
+            test_flags: "--platform=Win32"
 
           # Debug builds
-          # - os: macos-15
-          #   config: "debug"
-          #   build_flags: "OPTIMIZE=no"
-          #   test_flags: "--swift-config=debug --csharp-config=Debug"
+          - os: macos-15
+            config: "debug"
+            build_flags: "OPTIMIZE=no"
+            test_flags: "--swift-config=debug --csharp-config=Debug"
           - os: ubuntu-24.04
             config: "debug"
             build_flags: "OPTIMIZE=no"
             test_flags: "--csharp-config=Debug"
-          # # TODO - figure out how to properly install debug Python
-          # - os: windows-2022
-          #   config: "debug"
-          #   working_directory: "cpp"
-          #   build_flags: "/p:Platform=x64 /p:Configuration=Debug"
-          #   test_flags: "--platform=x64 --config=Debug"
-          #   msbuild_project: "msbuild/ice.proj"
+          # TODO - figure out how to properly install debug Python
+          - os: windows-2022
+            config: "debug"
+            working_directory: "cpp"
+            build_flags: "/p:Platform=x64 /p:Configuration=Debug"
+            test_flags: "--platform=x64 --config=Debug"
+            msbuild_project: "msbuild/ice.proj"
 
-          # # iOS
-          # - os: macos-15
-          #   config: "ios"
-          #   build_flags: "OPTIMIZE=no PLATFORMS='macosx iphonesimulator' CONFIGS='static shared' LANGUAGES='cpp swift'"
-          #   # TODO swift/Ice/udp doesn't work on CI
-          #   test_flags: "--languages='cpp,swift' --config=debug --platform=iphonesimulator --controller-app --rfilter=swift/Ice/udp"
-          #   build_cpp_and_python: true
+          # iOS
+          - os: macos-15
+            config: "ios"
+            build_flags: "OPTIMIZE=no PLATFORMS='macosx iphonesimulator' CONFIGS='static shared' LANGUAGES='cpp swift'"
+            # TODO swift/Ice/udp doesn't work on CI
+            test_flags: "--languages='cpp,swift' --config=debug --platform=iphonesimulator --controller-app --rfilter=swift/Ice/udp"
+            build_cpp_and_python: true
 
           # Static builds
           - os: ubuntu-24.04
@@ -75,18 +75,18 @@ jobs:
             test_flags: "--config=static --filter=Ice/ --filter=IceDiscovery/"
             working_directory: "cpp"
 
-          # # MATLAB
-          # - os: ubuntu-24.04
-          #   config: "matlab"
-          #   working_directory: "matlab"
-          #   build_cpp_and_python: true
-          # - os: windows-2022
-          #   config: "matlab"
-          #   working_directory: "matlab"
-          #   build_flags: "/p:Platform=x64"
-          #   msbuild_project: "msbuild/ice.proj"
-          #   test_flags: "--platform=x64"
-          #   build_cpp_and_python: true
+          # MATLAB
+          - os: ubuntu-24.04
+            config: "matlab"
+            working_directory: "matlab"
+            build_cpp_and_python: true
+          - os: windows-2022
+            config: "matlab"
+            working_directory: "matlab"
+            build_flags: "/p:Platform=x64"
+            msbuild_project: "msbuild/ice.proj"
+            test_flags: "--platform=x64"
+            build_cpp_and_python: true
 
           # Android (disabled until we fix https://github.com/zeroc-ice/ice/issues/3341)
           # - os: ubuntu-24.04
@@ -100,6 +100,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Configure coredumpctl
+        if: runner.os == 'Linux'
+        run: |
+          # Collect core dumps with the journal
+          sed -i 's/#Storage=external/Storage=external/' /etc/systemd/coredump.conf
+          systemctl restart systemd-journald
+        shell: bash
 
       - name: Setup C++
         uses: ./.github/actions/setup-cpp
@@ -199,11 +207,16 @@ jobs:
           if-no-files-found: ignore
         if: always()
 
+      - name: Write coredumpctl status
+        if: runner.os == 'Linux' && always()
+        shell: bash
+        run: coredumpctl info --no-pager ./coredump.log || true
+
       - name: Upload Linux core dumps
         uses: actions/upload-artifact@v4
         with:
           name: core-dumps-${{ matrix.config }}-${{ matrix.os }}
-          path: /var/lib/systemd/coredump/*
+          path: ./coredump.log
           if-no-files-found: ignore
         if: runner.os == 'Linux' && always()
 
