--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,7 +105,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           # Collect core dumps with the journal
-          sed -i 's/#Storage=external/Storage=journal/' /etc/systemd/coredump.conf
+          sudo sed -i 's/#Storage=external/Storage=journal/' /etc/systemd/coredump.conf
           systemctl restart systemd-journald
         shell: bash
 
