--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,8 +107,8 @@ jobs:
           # Collect core dumps with the journal
           sudo sed -i 's/#Storage=external/Storage=journal/' /etc/systemd/coredump.conf
           sudo systemctl restart systemd-journald
-          sudo coredumpctl gsettings
           cat /etc/systemd/coredump.conf | grep Storage
+          systemctl status systemd-coredump
 
         shell: bash
 
