--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,10 @@ jobs:
           sudo sed -i 's/#Storage=external/Storage=journal/' /etc/systemd/coredump.conf
           sudo systemctl restart systemd-journald
           cat /etc/systemd/coredump.conf | grep Storage
+          cat /proc/sys/kernel/core_pattern
+          sudo systemctl status systemd-journald
+          grep -iE 'SystemMaxUse|SystemKeepFree' /etc/systemd/journald.conf
+          journalctl -u systemd-coredump
 
         shell: bash
 
