JavaScript cleanup & lint fixes

--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -22,3 +22,7 @@ jobs:
       - name: Run JavaScript prettier
         run: npx prettier --check .
         working-directory: js
+
+      - name: Run JavaScript eslint
+        run: npx eslint .
+        working-directory: js
