--- a/js/package.json
+++ b/js/package.json
@@ -29,10 +29,13 @@
     },
     "browserslist": "> 0.25%, not dead",
     "devDependencies": {
+        "@eslint/js": "^9.23.0",
         "@rollup/plugin-strip": "^3.0.4",
         "@types/node": "^22.5.1",
         "c8": "^10.1.3",
         "del": "^7.1.0",
+        "eslint": "^9.23.0",
+        "globals": "^16.0.0",
         "gulp": "^5.0.0",
         "gulp-ext-replace": "^0.3.0",
         "gulp-ice-builder": "^3.0.4",
