--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -24,5 +24,5 @@ jobs:
         working-directory: js
 
       - name: Run JavaScript eslint
-        run: npx eslint .
+        run: npx eslint
         working-directory: js
