--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -23,6 +23,19 @@ jobs:
         run: npx prettier --check .
         working-directory: js
 
+  eslint:
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "latest"
+
       - name: Run JavaScript eslint
-        run: npx eslint
+        run: |
+          npm install
+          npx eslint
         working-directory: js
