Add Python Ice.EventLoopAdapter for async event loop integration
This PR introduces a new event loop adapter that enables integration of Ice with
the application's chosen event loop. It eliminates the need to manually call
Ice.wrap_future and provides a mechanism that can support event loops other than
asyncio's default loop.

--- a/python/modules/IcePy/msbuild/icepy.vcxproj
+++ b/python/modules/IcePy/msbuild/icepy.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="..\ConnectionInfo.cpp" />
     <ClCompile Include="..\Current.cpp" />
     <ClCompile Include="..\Executor.cpp" />
+    <ClCompile Include="..\Future.cpp" />
     <ClCompile Include="..\Endpoint.cpp" />
     <ClCompile Include="..\EndpointInfo.cpp" />
     <ClCompile Include="..\ImplicitContext.cpp" />
@@ -62,6 +63,7 @@
     <ClInclude Include="..\Executor.h" />
     <ClInclude Include="..\Endpoint.h" />
     <ClInclude Include="..\EndpointInfo.h" />
+    <ClInclude Include="..\Future.h" />
     <ClInclude Include="..\ImplicitContext.h" />
     <ClInclude Include="..\Logger.h" />
     <ClInclude Include="..\ObjectAdapter.h" />
