--- a/java/gradle/ice.gradle
+++ b/java/gradle/ice.gradle
@@ -8,12 +8,12 @@ buildscript {
             url = "https://plugins.gradle.org/m2/"
         }
     }
-    dependencies {
-        classpath "com.diffplug.spotless:spotless-plugin-gradle:6.25.0"
-    }
+    /*dependencies {
+        classpath "com.puppycrawler.tools:checkstyle:${toolVersion}"
+    }*/
 }
 
-apply plugin: com.diffplug.gradle.spotless.SpotlessPlugin
+apply plugin: 'checkstyle'
 
 slice {
     includeSearchPath = files("${project.ext.topSrcDir}/slice")
@@ -28,36 +28,12 @@ slice {
     }
 }
 
-spotless {
-  format 'misc', {
-    // define the files to apply `misc` to
-    target '*.java', '*.gradle'
-
-    // define the steps to apply to those files
-    trimTrailingWhitespace()
-    endWithNewline()
-  }
-
-  java {
-    toggleOffOn()
-
-    target project.fileTree("src/main/java") {
-        include '**/*.java'
-        exclude 'com/zeroc/Ice/PropertyNames.java'
-    }
-
-    // Remove any unused imports, then ensure the remaining imports are correctly ordered.
-    removeUnusedImports()
-
-    // Linting
-    cleanthat()
-
-    // We use google-java-format to format our Java code. We also set reorderImports and formatJavadoc to true to
-    // match the default behavior of the google-java-format tool.
-    // When updating the version be sure to update the version in `.vscode/settings.json` as well.
-    googleJavaFormat("1.24.0").aosp().reorderImports(true).formatJavadoc(true)
-    formatAnnotations()
-  }
+checkstyle {
+    toolVersion = '10.21.4'
+    ignoreFailures = true
+    showViolations = true
+    //include '**/*.java'
+    //exclude 'com/zeroc/Ice/PropertyNames.java'
 }
 
 // Android does not have a compileJava task
