--- a/java/gradle/ice.gradle
+++ b/java/gradle/ice.gradle
@@ -8,12 +8,10 @@ buildscript {
             url = "https://plugins.gradle.org/m2/"
         }
     }
-    /*dependencies {
-        classpath "com.puppycrawler.tools:checkstyle:${toolVersion}"
-    }*/
 }
 
 apply plugin: 'checkstyle'
+apply plugin: 'org.openrewrite.rewrite'
 
 slice {
     includeSearchPath = files("${project.ext.topSrcDir}/slice")
