This CI will fail. Modifies the exclusions so rewrite adjusts Kotlin files, removes an unnecessary comment block from build.gradle.kts, and causes rewriteDryRun to fail in the CI whenever it detects needed changes. This behavior can be averted by placing -PdryRunFailSkip in the command line after gradlew.

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: ["main"]
-  
+
   jobs:
     gradle:
     runs-on: ubuntu-24.04
@@ -17,4 +17,4 @@ on:
       - name: Run Gradle with Checkstyle and RewriteDryRun
         timeout-minutes: 10
         working-directory: java
-        uses: ./gradlew build -PfailOnDryRunResults=true
+        uses: ./gradlew build
